# Empty_CW

./: .gitignore  CMakeLists.txt  README.md
Other/main-mat/: README.md  SomeTasks.md
Other/main-mat/solutions/lab_1/work_1/: main.c  work1.h
Other/main-mat/solutions/lab_1/work_10/: input.txt  main.c  work10.h
Other/main-mat/solutions/lab_1/work_2/: main.c  work2.h
Other/main-mat/solutions/lab_1/work_3/: main.c  work3.h
Other/main-mat/solutions/lab_1/work_4/: in.txt  main.c  out.txt  work4.h
Other/main-mat/solutions/lab_1/work_5/: main.c  work5.h
Other/main-mat/solutions/lab_1/work_6/: main.c  work6.h
Other/main-mat/solutions/lab_1/work_7/: main.c  work7.h
Other/main-mat/solutions/lab_1/work_8/: input.txt  main.c  out.txt  work8.h
Other/main-mat/solutions/lab_1/work_9/: main.c  work9.h
Other/main-mat/solutions/lab_3/: MonoBehavior.c
Other/main-mat/solutions/lab_4/: Base.c
Other/main-os/: ,gitattributes  .gitignore  CMakeLists.txt  README.md
Other/main-os/allocator/: CMakeLists.txt
Other/main-os/allocator/allocator/: CMakeLists.txt
Other/main-os/arithmetic/: CMakeLists.txt
Other/main-os/arithmetic/big_integer/: CMakeLists.txt
Other/main-os/arithmetic/continued_fraction/: CMakeLists.txt
Other/main-os/arithmetic/fraction/: CMakeLists.txt
Other/main-os/arithmetic/fraction/include/: fraction.h
Other/main-os/arithmetic/fraction/src/: fraction.cpp
Other/main-os/arithmetic/fraction/tests/: CMakeLists.txt  tests_fractions.cpp
Other/main-os/associative_container/: CMakeLists.txt
Other/main-os/associative_container/hash_table/: CMakeLists.txt
Other/main-os/associative_container/include/: associative_container.h
Other/main-os/associative_container/search_tree/: CMakeLists.txt
Other/main-os/associative_container/src/: hhh.cpp
Other/main-os/logger/: CMakeLists.txt
Other/main-os/logger/client_logger/: CMakeLists.txt
Other/main-os/logger/logger/: CMakeLists.txt
Other/main-os/logger/server_logger/: CMakeLists.txt
Other/main-osi/: README.md
Other/main-osi/lab_1/work_1/: INFO  main.c  work1.h
Other/main-osi/lab_1/work_2/: application.h  main.c  manager.h
Other/main-osi/lab_1/work_3/: 1.txt  main  main.c  work3.h
Other/main-osi/lab_1/work_4/: main.c  out.txt  work4.h
Other/main-osi/lab_2/1/: main.c
Other/main-osi/lab_2/2/: main1.c  main2.c
Other/main-osi/lab_2/3/: main.c
Other/main-osi/lab_2/4/: in2.txt  inputs.txt  main.c
Other/main-osi/lab_2/5/: main.c
Other/main-osi/lab_3/1/: client  client.c  data.txt  main  server.c
Other/main-osi/lab_3/3/: client  client.c  main  main.c  server.c  shared_memory.c
Other/main-osi/lab_3/4/: main  main.c  validate.c
Other/main-osi/lab_3/5/: main  main.c
allocator/allocator/: CMakeLists.txt
allocator/allocator/include/: allocator.h  allocator_test_utils.h  allocator_with_fit_mode.h
allocator/allocator/src/: allocator.cpp  allocator_test_utils.cpp
allocator/allocator_boundary_tags/: CMakeLists.txt
allocator/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocator/allocator_boundary_tags/src/: allocator_boundary_tags.cpp
allocator/allocator_boundary_tags/tests/: CMakeLists.txt  allocator_boundary_tags_tests.cpp
allocator/allocator_buddies_system/: CMakeLists.txt
allocator/allocator_buddies_system/include/: allocator_buddies_system.h
allocator/allocator_buddies_system/src/: allocator_buddies_system.cpp
allocator/allocator_buddies_system/tests/: CMakeLists.txt  allocator_buddies_system_tests.cpp
allocator/allocator_global_heap/: CMakeLists.txt
allocator/allocator_global_heap/include/: allocator_global_heap.h
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
allocator/allocator_global_heap/tests/: CMakeLists.txt  allocator_global_heap_tests.cpp
allocator/allocator_red_black_tree/: CMakeLists.txt
allocator/allocator_red_black_tree/include/: allocator_red_black_tree.h
allocator/allocator_red_black_tree/src/: allocator_red_black_tree.cpp
allocator/allocator_red_black_tree/tests/: CMakeLists.txt  allocator_red_black_tree_tests.cpp
allocator/allocator_sorted_list/: CMakeLists.txt
allocator/allocator_sorted_list/include/: allocator_sorted_list.h
allocator/allocator_sorted_list/src/: allocator_sorted_list.cpp
allocator/allocator_sorted_list/tests/: allocator_sorted_list_tests.cpp
common/include/: not_implemented.h  typename_holder.h
cursal_work/: CMakeLists.txt  requests.md
cursal_work/client/: CMakeLists.txt  client.cpp  client.h  input  main.cpp
cursal_work/heart/: CMakeLists.txt  heart.cpp  heart.h  main.cpp
cursal_work/launcher/: launcher.cpp  launcher.h
cursal_work/server/: CMakeLists.txt  main.cpp
cursal_work/server/in_disk/: CMakeLists.txt
cursal_work/server/in_disk/controller/: disk_controller.cpp  disk_controller.h
cursal_work/server/in_disk/tree/: b_tree_disk.h
cursal_work/server/in_memory/: CMakeLists.txt
cursal_work/server/in_memory/controller/: memory_controller.cpp  memory_controller.h
cursal_work/server/in_memory/tree/: CMakeLists.txt  b_tree.h  test.cpp
cursal_work/server/interfaces/: CMakeLists.txt  controller_int.cpp  controller_int.h  operation.h
cursal_work/server/server/: CMakeLists.txt  server.cpp  server.h
cursal_work/server/utility_cw/: CMakeLists.txt  converters.cpp  converters.h  crutch.cpp  generator.h
cursal_work/structure/: student.cpp  student.h
logger/: CMakeLists.txt  set.json
logger/client_logger/include/: client_logger.h  client_logger_builder.h
logger/client_logger/src/: client_logger.cpp  client_logger_builder.cpp
logger/client_logger/tests/: CMakeLists.txt  client_logger_tests.cpp
logger/logger/: CMakeLists.txt
logger/logger/include/: logger.h  logger_builder.h
logger/logger/src/: logger.cpp  logger_builder.cpp
logger/server_logger/: CMakeLists.txt
logger/server_logger/include/: server_logger.h  server_logger_builder.h
logger/server_logger/src/: server_logger.cpp  server_logger_builder.cpp
logger/server_logger/tests/: CMakeLists.txt  form.json  server.cpp  server.h  server_logger_tests.cpp  server_test.cpp
(+190 files in other folders)
